--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -3,7 +3,7 @@ FROM node:lts-alpine
 RUN npm install -g http-server
 
 WORKDIR /app
-
+ENV VUE_APP_API="https://restaurant-api.nimasfl.ir"
 COPY package*.json ./
 
 RUN npm install
