--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -1,7 +1,10 @@
 FROM node:lts-alpine
 
 WORKDIR /app
+
 ENV VUE_APP_API="https://restaurant-api.nimasfl.ir"
+ENV USE_SSL="false"
+
 COPY package*.json ./
 
 RUN npm install
