added vue cli to docker image

--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -8,6 +8,7 @@ ENV USE_SSL="false"
 COPY package*.json ./
 
 RUN npm install
+RUN npm install -g @vue/cli
 
 EXPOSE 8080
 CMD [ "npm", "run", "serve" ]
