--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -15,7 +15,7 @@ RUN ls /app
 FROM nginx
 
 WORKDIR /usr/share/nginx/html/
-COPY --from=base /app/build  /usr/share/nginx/html/
+COPY --from=base /app/dist  /usr/share/nginx/html/
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
