changed nginx to use my custom image

--- a/.github/Dockerfile
+++ b/.github/Dockerfile
@@ -12,10 +12,8 @@ RUN npm install
 RUN npm run build
 RUN ls /app
 
-FROM nginx
-
-WORKDIR /usr/share/nginx/html/
-COPY --from=base /app/dist  /usr/share/nginx/html/
+FROM registry.nimasfl.ir/react-nginx
+COPY --from=base /app/build  /app
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
